@@ -1,4 +1,5 @@
 2013-01-27 Graeme Gott <graeme@gottcode.org>
+	* Use pattern icon in details dialog.
 	* Use buttons for choosing pattern in new game dialog.
 
 2013-01-26 Graeme Gott <graeme@gottcode.org>
